--- a/buster/config/bootloaders/isolinux/menu.cfg
+++ b/buster/config/bootloaders/isolinux/menu.cfg
@@ -4,6 +4,14 @@ menu width 82
 menu title Boot menu
 include stdmenu.cfg
 include live.cfg
+menu begin local
+   menu title ^Live with localisation support
+   include stdmenu.cfg
+   label mainmenu
+      menu label ^Back..
+      menu exit
+   include local.cfg
+menu end
 include install.cfg
 menu begin advanced
 	menu title ^Advanced options
